--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,12 @@
     "cors": "^2.8.4",
     "eslint": "^4.9.0",
     "express": "^4.16.2",
+    "joi": "^13.0.0",
     "morgan": "^1.9.0",
-    "nodemon": "^1.12.1"
+    "mysql2": "^1.4.2",
+    "nodemon": "^1.12.1",
+    "sequelize": "^4.13.15",
+    "sqlite3": "^3.1.8"
   },
   "devDependencies": {
     "eslint-config-standard": "^10.2.1",
